# dumb-linalg

./: Cargo.toml  Makefile.toml
examples/: hw04-ex1.rs  hw04-ex2.rs
src/: complex.rs  lib.rs  main.rs  matrix.rs  norm.rs  qr.rs  traits.rs  util.rs  vector.rs  vector_old.rs
tests/: complex.rs  matrix.rs  vector.rs.back
