[package]
name = "dumb-linalg"
version = "0.1.0"
authors = ["Nils Olsson <nilso@enosis.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
nalgebra = "0.21.1"
auto_ops = "0.1.0"
rand = "0.7.3"
plotters = "0.2.15"

[dev-dependencies]
lazy_static = "1.4.0"
